Fix footer not aligning to center

--- a/styles.css
+++ b/styles.css
@@ -61,6 +61,49 @@ body {
   cursor: pointer;
 }
 
+
+.footer{
+  display:grid;
+  gap: 0.25rem;
+  grid-template-rows: 2rem 0.5rem;
+  place-content: center;
+  place-items: center;
+  margin-top: auto;
+  padding-bottom: 0.5rem;
+  margin-left: -20px;
+}
+
+.github-link {
+  display:flex;
+  font-size: 1rem;
+  gap: 0.5rem;
+  align-items: center;
+  justify-content: center;
+}
+
+a:link {
+  font-weight: 600;
+  text-decoration: none;
+  color: #fff;
+}
+
+a:visited {
+  color: #fff;
+}
+
+a:hover {
+  color:#16C381;
+}
+
+.github-link > img {
+  height: 2rem;
+}
+
+.vector-link {
+  grid-row: 2 / 3;
+  font-size: 0.5rem;
+}
+
 /* ------------- */
   /* Header */
 /* ------------- */
@@ -113,10 +156,15 @@ body {
 .share-btns > button {
   background-color: #143F38;
   font-weight: 900;
+  cursor: pointer;
   color: #fff;
   padding: 0.4rem 1.75rem;
   border:none;
   border-radius: 10px;
+}
+
+.share-btns > button:hover {
+  background-color:#16C381;
 }
 
 .greetings {
@@ -217,7 +265,6 @@ body {
 
 .announcements {
   font-size: 0.6rem;
-  /* gap: 1rem; */
   padding-right: 2.5rem;
   padding-left: 2.5rem;
 }
@@ -229,7 +276,6 @@ body {
   text-overflow: ellipsis;
   overflow: hidden;
   border-bottom: 1px solid #d3d3d3;
-  /* padding-bottom: 1rem; */
   padding: 0.5rem 0;
 }
 
@@ -290,36 +336,6 @@ body {
   color: #7b7b7b;
 }
 
-.footer{
-  display:flex;
-  gap: 0.25rem;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin-top: auto;
-  padding-bottom: 0.5rem;
-}
-
-.github-link {
-  display:flex;
-  font-size: 1rem;
-  gap: 0.7rem;
-  justify-content: center;
-  align-items: center;
-}
-
-.github-link:link, .vector-link:link {
-  text-decoration: none;
-  color: #fff;
-}
-
-.github-link > img {
-  height: 2rem;
-}
-
-.vector-link {
-  font-size: 0.5rem;
-}
 
 
 
